# gitai

./: Cargo.toml  LICENSE  README.md
scripts/: detect_system.sh  install.sh
src/: anthropic.rs  api.rs  main.rs  prompt.rs
